fix: issue with 100vh on iOS

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@
 
 .page {
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   padding: 0 10px;
   box-sizing: border-box;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
@@ -11,6 +11,7 @@
 
 .page__container {
   width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 600px) {
@@ -19,8 +20,11 @@
   }
 }
 
+/* fix issue: Нижняя часть страницы скрыта за панелью браузера в Safari на iPhone */
 @supports (-webkit-touch-callout: none) {
   .page {
-    background-attachment: initial;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
