--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -14,3 +14,10 @@
     padding: 8px;
   }
 }
+
+/* fix issue: Нижняя часть страницы скрыта за панелью браузера в Safari на iPhone */
+@supports (-webkit-touch-callout: none) {
+  .main {
+    height: 100%;
+  }
+}
